--- a/SF Crime Classification/SF Crime.ipynb
+++ b/SF Crime Classification/SF Crime.ipynb
@@ -313,10 +313,10 @@
     "from yelp.oauth1_authenticator import Oauth1Authenticator\n",
     "\n",
     "auth = Oauth1Authenticator(\n",
-    "    consumer_key= \"kb5CBdbkEBH0zQ8sErU7dA\",\n",
-    "    consumer_secret= \"rdwdV8RdWq-91y2QQyQ3svQh94M\",\n",
-    "    token= \"vEZsT1W9lsiiv8jrY3o5LQZ6Uit1S6Ft\",\n",
-    "    token_secret= \"_DUSADeqEoI09XUQO7GtiqWiuY4\"\n",
+    "    consumer_key= \"YOUR_CONSUMER_KEY\",\n",
+    "    consumer_secret= \"YOUR_CONSUMER_SECRET\",\n",
+    "    token= \"YOUR_TOKEN\",\n",
+    "    token_secret= \"YOUR_TOKEN_SECRET\"\n",
     "    )\n",
     "   \n",
     "client = Client(auth)\n",
@@ -431,10 +431,10 @@
     "\n",
     "def get_results(params):\n",
     "#Obtain these from Yelp's manage access page\n",
-    "    consumer_key= \"kb5CBdbkEBH0zQ8sErU7dA\"\n",
-    "    consumer_secret= \"rdwdV8RdWq-91y2QQyQ3svQh94M\"\n",
-    "    token= \"vEZsT1W9lsiiv8jrY3o5LQZ6Uit1S6Ft\"\n",
-    "    token_secret= \"_DUSADeqEoI09XUQO7GtiqWiuY4\"\n",
+    "    consumer_key= \"YOUR_CONSUMER_KEY\"\n",
+    "    consumer_secret= \"YOUR_CONSUMER_SECRET\"\n",
+    "    token= \"YOUR_TOKEN\"\n",
+    "    token_secret= \"YOUR_TOKEN_SECRET\"\n",
     "   \n",
     "\n",
     "    session = rauth.OAuth1Session(\n",
